Feat: New 'Login'

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,42 +1,53 @@
-<footer class="footer text-light py-5">
+<footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-        <h5 class="mb-4">Contacto</h5>
-        <p><i class="fas fa-envelope me-2"></i>romancillostore&#64;mail.com</p>
-        <p><i class="fas fa-phone me-2"></i>+52 (669) 322 1234</p>
-        <p><i class="fas fa-map-marker-alt me-2"></i>Av. Silvia Abreu, Edificio Los Delfines, Piso 2, Mazatlán, Sinaloa, México 8185</p>
-      </div>
-      <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-        <h5 class="mb-4">Enlaces</h5>
-        <ul class="list-unstyled">
-          <li><a href="#" class="text-decoration-none text-light">Inicio</a></li>
-          <li><a href="#" class="text-decoration-none text-light">Brands</a></li>
-          <li><a href="#" class="text-decoration-none text-light">Categorías</a></li>
-          <li><a href="#" class="text-decoration-none text-light">Productos</a></li>
+      <div class="col-lg-3 col-md-6 mb-4">
+        <h5>Contacto</h5>
+        <ul class="contact-info list-unstyled">
+          <li><i class="fas fa-envelope me-2"></i> romancillostore&#64;mail.com</li>
+          <li><i class="fas fa-phone me-2"></i> +52 (669) 322 1234</li>
+          <li><i class="fas fa-map-marker-alt me-2"></i> Av. Silvia Abreu, Edificio Los Delfines, Piso 2, Mazatlán, Sinaloa, México 8185</li>
         </ul>
       </div>
-      <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-        <h5 class="mb-4">Síguenos</h5>
+      <div class="col-lg-2 col-md-6 mb-4">
+        <h5>Enlaces</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-facebook-f me-2"></i>Romancillo Store Official</a></li>
-          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-twitter me-2"></i>&#64;romancillostore</a></li>
-          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-instagram me-2"></i>&#64;romancillostore</a></li>
-          <li><a href="#" class="text-decoration-none text-light"><i class="fab fa-tiktok me-2"></i>&#64;romancillostore</a></li>
+          <li><a routerLink="/" class="text-decoration-none">Inicio</a></li>
+          <li><a routerLink="/" class="text-decoration-none">Marcas</a></li>
+          <li><a routerLink="/" class="text-decoration-none">Categorías</a></li>
+          <li><a routerLink="/" class="text-decoration-none">Productos</a></li>
         </ul>
       </div>
-      <div class="col-lg-2 col-md-6">
-        <h5 class="mb-4">Legal</h5>
+      <div class="col-lg-2 col-md-6 mb-4">
+        <h5>Legal</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-decoration-none text-light">Términos y Condiciones</a></li>
-          <li><a href="#" class="text-decoration-none text-light">Política de Privacidad</a></li>
-          <li><a href="#" class="text-decoration-none text-light">Política de Cookies</a></li>
+          <li><a routerLink="/" class="text-decoration-none">Términos y Condiciones</a></li>
+          <li><a routerLink="/" class="text-decoration-none">Política de Privacidad</a></li>
+          <li><a routerLink="/" class="text-decoration-none">Política de Cookies</a></li>
         </ul>
+      </div>
+      <div class="col-lg-2 col-md-6 mb-4">
+        <h5>Síguenos</h5>
+        <ul class="social-links list-unstyled">
+          <li><a href="#" class="text-decoration-none"><i class="fab fa-facebook-f me-2"></i> Facebook</a></li>
+          <li><a href="#" class="text-decoration-none"><i class="fab fa-twitter me-2"></i> Twitter</a></li>
+          <li><a href="#" class="text-decoration-none"><i class="fab fa-instagram me-2"></i> Instagram</a></li>
+          <li><a href="#" class="text-decoration-none"><i class="fab fa-tiktok me-2"></i> TikTok</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-md-12 mb-4">
+        <h5>Suscríbete a nuestro boletín</h5>
+        <form>
+          <div class="input-group">
+            <input type="email" class="form-control" placeholder="Tu correo electrónico" aria-label="Email" aria-describedby="button-subscribe">
+            <button class="btn btn-primary" type="button" id="button-subscribe">Suscribirse</button>
+          </div>
+        </form>
       </div>
     </div>
     <div class="row mt-4">
-      <div class="col">
-        <p class="text-center mb-0">© 2024 Romancillo's. Todos los derechos reservados.</p>
+      <div class="col text-center">
+        <p class="mb-0">© 2024 Romancillo's. Todos los derechos reservados.</p>
       </div>
     </div>
   </div>
