--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,15 +1,24 @@
 <div class="side-menu" [class.open]="isOpen">
   <div class="btn-close-container">
-      <i class="fas fa-times fa-2x" (click)="closeSideMenu()"></i>
+    <i class="fas fa-times fa-2x" (click)="closeSideMenu()"></i>
   </div>
   <ul>
     <div class="menu-item">
-      <li><a routerLink="/" (click)="closeSideMenu()">Home</a></li>
-      <li><a href="#">Brands</a></li>
-      <li><a href="#">Categories</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a routerLink="/login" (click)="closeSideMenu()">Login</a></li>
+      <li><a routerLink="/" (click)="closeSideMenu()">Inicio</a></li>
+      <li><a routerLink="/" (click)="closeSideMenu()">Marcas</a></li>
+      <li><a routerLink="/" (click)="closeSideMenu()">Categorías</a></li>
+      <li><a routerLink="/" (click)="closeSideMenu()">Productos</a></li>
+      <li><a routerLink="/" (click)="closeSideMenu()">Mis Pedidos</a></li>
+      <li *ngIf="!userEmail"><a routerLink="/login" (click)="closeSideMenu()">Iniciar Sesión</a></li>
     </div>
   </ul>
+  <div class="account-container" *ngIf="userEmail">
+    <div class="current-mail">
+      <p>{{ userEmail }}</p>
+    </div>
+    <div class="sign-out-btn" (click)="logOut()">
+      <p>Cerrar Sesión</p>
+    </div>
+  </div>
 </div>
 <div class="overlay" *ngIf="isOpen" (click)="closeSideMenu()"></div>
