--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,16 +1,74 @@
 .footer {
-  font-family: var(--fuentePrincipal);
   background-color: var(--colorPrimario);
+  color: var(--colorSecundario);
+  padding: 40px 0;
+  font-family: var(--fuentePrincipal);
+
+  h5 {
+    font-size: 18px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-family: var(--fuentePrincipal);
+  }
 
   ul {
     padding-left: 0;
+    list-style: none;
+
+    li {
+      margin-bottom: 10px;
+    }
+
+    a {
+      color: var(--colorSecundario);
+      text-decoration: none;
+      transition: color 0.3s;
+
+      &:hover {
+        color: var(--colorHover);
+      }
+    }
   }
 
-  a {
-    color: inherit;
-
-    &:hover {
-      color: #fff;
+  .contact-info {
+    li {
+      margin-bottom: 10px;
+      i {
+        color: var(--colorHover);
+      }
     }
+  }
+
+  .social-links {
+    a {
+      display: flex;
+      align-items: center;
+      i {
+        margin-right: 8px;
+      }
+    }
+  }
+
+  .input-group {
+    input {
+      border-radius: 0;
+    }
+
+    button {
+      border-radius: 0;
+      background-color: var(--colorHover);
+      border: none;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: var(--colorHoverDarker);
+      }
+    }
+  }
+
+  .text-center {
+    margin-top: 20px;
+    font-size: 14px;
   }
 }
