--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,8 +4,8 @@
     <div class="branding-logo">
       <img src="../../assets/img/logos/border-logo.png" alt="Logo del Branding" routerLink="/">
     </div>
-    <h2 class="login-title mt-4 mb-4 text-center fw-bold">Inicia Sesión</h2>
-    <div class="login-container">
+    <h2 class="register-title mt-4 mb-4 text-center fw-bold">Regístrate</h2>
+    <div class="register-container">
       <div class="credenciales-container">
         <div class="credenciales">
           <div class="mb-3">
@@ -19,10 +19,17 @@
             <i (mousedown)="togglePasswordVisibility(true)" (mouseup)="togglePasswordVisibility(false)" (mouseleave)="togglePasswordVisibility(false)" class="fa fa-eye password-toggle"></i>
             <div *ngIf="password === '' && submitted" class="text-danger">Debes ingresar una contraseña</div>
           </div>
-          <div class="mt-3 text-center">
-            <span>¿No tienes cuenta? <a routerLink="/register">Crea una aquí.</a></span>
+          <div class="mb-3 position-relative">
+            <label for="inputConfirmPassword" class="form-label">Confirmar Contraseña</label>
+            <input [type]="confirmPasswordFieldType" class="form-control input" id="inputConfirmPassword" placeholder="Confirma tu contraseña" [(ngModel)]="confirmPassword" name="confirmPassword" required>
+            <i (mousedown)="toggleConfirmPasswordVisibility(true)" (mouseup)="toggleConfirmPasswordVisibility(false)" (mouseleave)="toggleConfirmPasswordVisibility(false)" class="fa fa-eye password-toggle"></i>
+            <div *ngIf="confirmPassword === '' && submitted" class="text-danger">Debes confirmar tu contraseña</div>
+            <div *ngIf="password !== confirmPassword && submitted" class="text-danger">Las contraseñas no coinciden</div>
           </div>
-          <button (click)="login()" type="submit" class="btn btn-login">Iniciar Sesión</button>
+          <div class="mt-3 text-center">
+            <span>¿Ya tienes cuenta? <a routerLink="/login">Inicia Sesión Aquí</a></span>
+          </div>
+          <button (click)="register()" type="submit" class="btn btn-register">Registrarse</button>
         </div>
       </div>
     </div>
