--- a/src/app/side-menu/side-menu.component.scss
+++ b/src/app/side-menu/side-menu.component.scss
@@ -4,12 +4,21 @@
   top: 0;
   right: 0;
   height: 100%;
-  width: 100%;
+  width: 35%;
   transition: transform 0.8s ease;
   z-index: 1001;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  transform: translateX(-100%);
+  transform: translateX(100%);
   font-family: var(--fuentePrincipal);
+
+  @media (max-width: 820px) {
+    width: 50%;
+  }
+
+  @media (max-width: 640px) {
+    width: 100%;
+    transform: translateX(-100%);
+  }
 
   &.open {
     transform: translateX(0);
@@ -27,26 +36,28 @@
     padding: 1rem;
     margin: 20px 0 0;
 
-    a {
-      text-decoration: none;
-      color: #fff;
-      font-size: 35px;
-    }
+    li {
+      margin: 20px 0 0;
+      padding: 1rem;
+      transition: ease-in 0.2s;
 
-    @media (max-width: 640px) {
-
-      a {
-        font-size: 27px;
+      &:hover {
+        transform: scale(1.1);
       }
 
+      a {
+        text-decoration: none;
+        color: #fff;
+        font-size: 35px;
+
+        @media (max-width: 640px) {
+          a {
+            font-size: 27px;
+          }
+        }
+      }
     }
   }
-
-  li {
-    margin: 10px 0 0;
-    padding: 1rem;
-  }
-
 }
 
 .overlay {
@@ -65,13 +76,65 @@
   align-items: center;
   justify-content: center;
   margin: 40px 0 0;
+  cursor: pointer;
 
   i {
     font-size: 50px;
     color: white;
+    transition: ease-in 0.2s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.account-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 100px 0 0;
+
+  .current-mail {
+    margin: 0 0 20px 0;
+    color: #fff;
+    font-size: 30px;
+    font-weight: 700;
+
+    @media (max-width: 820px) {
+      font-size: 25px;
+    }
+  }
+
+  .sign-out-btn {
+    color: gray;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 25px;
+    transition: ease-in 0.2s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    @media (max-width: 820px) {
+      font-size: 20px;
+    }
+  }
+
+  .sign-out-btn {
+    i {
+      margin: 0 0 0 10px;
+      cursor: pointer;
+      transition: ease-in 0.2s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
 }
