--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: var(--colorPrimario);
+  background-color: black;
   color: var(--colorSecundario);
   padding: 40px 0;
   font-family: var(--fuentePrincipal);
