--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,10 @@
-@import "~@fortawesome/fontawesome-free/css/all.css";
-
 :root {
 
   --fuentePrincipal: "Outfit", sans-serif;
   --fuenteSecundaria: "Heebo", sans-serif;
 
   --colorPrimario: #0F151B;
-  --colorSecundario: #F5F5F5;
+  --colorSecundario: #e4e4e4;
 
 
 }
