--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -50,6 +50,16 @@
   border: none;
   color: var(--colorPrimario);
   font-size: 18px;
+
+  .close-icon {
+    font-size: 40px;
+    color: var(--colorPrimario);
+    transition: ease-in 0.2s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
 }
 
 .cart-item {
@@ -74,13 +84,13 @@
       display: flex;
       flex-direction: column;
 
-      .item-name{
+      .item-name {
         font-size: 25px;
         margin: 5px 0 0;
         font-weight: 700;
       }
 
-      .item-price{
+      .item-price {
         color: gray;
         font-size: 17px;
         margin: 7px 0 0;
@@ -97,8 +107,10 @@
       padding: 0;
       cursor: pointer;
 
-      i {
+      svg {
         font-size: 17px;
+        width: 20px;
+        height: 20px;
       }
     }
 
@@ -106,9 +118,7 @@
       margin: 0 15px;
       font-size: 17px;
     }
-
   }
-
 
   .remove-item-btn {
     background: none;
@@ -116,9 +126,11 @@
     cursor: pointer;
     margin: 0 26px 0;
 
-    i {
+    svg {
       color: var(--colorPrimario);
-      font-size: 22px;
+      font-size: 20px;
+      width: 20px;
+      height: 20px;
     }
   }
 }
@@ -126,15 +138,13 @@
 .cart-summary {
   text-align: end;
 
-  .total-text{
+  .total-text {
     font-size: 18px;
   }
 
   .total-price {
     font-weight: 700;
   }
-
-
 }
 
 .cart-btns {
@@ -173,8 +183,6 @@
       color: white;
     }
   }
-
-
 }
 
 .overlay {
@@ -187,7 +195,6 @@
   transition: opacity 0.3s ease;
   z-index: 999;
 }
-
 
 .overflow-hidden {
   overflow: hidden;
