--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--colorPrimario);
+  background-color: black;
   height: 30px;
   width: 100%;
   padding: 5px;
@@ -27,6 +27,16 @@
   text-align: center;
   font-family: var(--fuentePrincipal);
   padding: 15px 5px;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  background-color: white;
+
+  &.hidden {
+    transform: translateY(-100%);
+  }
 
   @media (min-width: 1024px) {
     padding: 15px 20px;
@@ -63,6 +73,12 @@
       font-size: 20px;
     }
   }
+
+  .icon {
+    width: 24px;
+    height: 24px;
+    fill: currentColor;
+  }
 }
 
 .bars-btn {
@@ -78,8 +94,10 @@
     transform: scale(1.1);
   }
 
-  i {
-    font-size: 23.5px;
+  .icon {
+    width: 24px;
+    height: 24px;
+    fill: currentColor;
   }
 
   @media (max-width: 1024px) {
