--- a/src/app/side-menu/side-menu.component.scss
+++ b/src/app/side-menu/side-menu.component.scss
@@ -1,6 +1,6 @@
 .side-menu {
   position: fixed;
-  background-color: var(--colorPrimario);
+  background-color: black;
   top: 0;
   right: 0;
   height: 100%;
@@ -78,7 +78,7 @@
   margin: 40px 0 0;
   cursor: pointer;
 
-  i {
+  .close-icon {
     font-size: 50px;
     color: white;
     transition: ease-in 0.2s;
@@ -123,18 +123,6 @@
 
     @media (max-width: 820px) {
       font-size: 20px;
-    }
-  }
-
-  .sign-out-btn {
-    i {
-      margin: 0 0 0 10px;
-      cursor: pointer;
-      transition: ease-in 0.2s;
-
-      &:hover {
-        transform: scale(1.1);
-      }
     }
   }
 }
